--- a/Views/CannabisOrderEntry/Index.cshtml
+++ b/Views/CannabisOrderEntry/Index.cshtml
@@ -13,10 +13,12 @@
         <label for="dateOrdered" class="Label">Date Ordered:</label>
         <input type="date" id='dateOrdered' class="Date" name="dateOrdered" />
     </div>
-    <div class="searchInput">
-        <label class="Labelshort" for="orderNumber">Order #:</label>
+    <div class="Gap66"></div>
+    <div class="searchInput220">
+        <label class="Label" for="orderNumber">Order #:</label>
         <input type="text" class="input" id="orderNumber" />
     </div>
+    <div class="Gap2"></div>
     <div class="searchDropdown">
         <label for="customerOrderStatus" class="Label">Order Status:</label>
         <select class="form-control dropDownInput" id="customerOrderStatus" name="customerOrderStatus"></select>
@@ -26,9 +28,9 @@
         <label for="customer" class="Label">Customer:</label>
         <select class="form-control dropDownInput2" id="customer" name="Customer"></select>
     </div>
-    <div class="searchDropdown">
+    <div class="searchDropdown2">
         <label for="supplier" class="Label">Supplier:</label>
-        <select class="form-control dropDownInput" id="supplier" name="Supplier"></select>
+        <select class="form-control dropDownInput2" id="supplier" name="Supplier"></select>
     </div>
     <div class="Notes">
         <label class="Label" for="specialInstructions">Special Notes:</label>
