--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-area="" asp-controller="CannabisOrderEntry" asp-action="Index">Cannabis Order Entry</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="CannabisCustSumm" asp-action="Index">Cannabis Customer Summary</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="ReceivedCannabisOrder" asp-action="Index">Received order</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="ReceivedCannabisOrder" asp-action="Index">Receive Order</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
