--- a/Views/CannabisOrderEntry/Index.cshtml
+++ b/Views/CannabisOrderEntry/Index.cshtml
@@ -85,7 +85,7 @@
                             delOptions: { url: 'CannabisOrderEntry/Delete' }
                         }
                     },
-                    { label: 'Customer Order Detail Id', name: 'customerOrderDetailID', hidden: true, editable: true, editoptions: { readonly: 'readonly' }, key: true },
+                    { label: 'Customer Order Detail Id', name: 'customerOrderDtlsID', hidden: true, editable: true, editoptions: { readonly: 'readonly' }, key: true },
                     { label: 'Customer Order Id', name: 'customerOrderID', hidden: true, editable: true, editoptions: { readonly: 'readonly' } },
                     {
                         label: 'Product Desc', name: 'productDesc', fixed: true, width: 150, editable: true, editrules: { required: true, custom: true, custom_func: IsProduct },
