--- a/Views/FulfillSales/Index.cshtml
+++ b/Views/FulfillSales/Index.cshtml
@@ -93,7 +93,7 @@
                             delOptions: { url: 'FulfillSales/DeleteHdr' }
                         }
                     },
-                   { label: 'Customer Order Id',name: 'customerOrderID',hidden:true, editable: true,editoptions: { readonly: 'readonly'},key: true},
+                   { label: 'Customer Order Id',name: 'customerOrderID',hidden:true, editable: true,editoptions: { readonly: 'readonly'}},//,key: true},
                    { label: 'Order Date',name: 'orderDate', editable: true,editoptions: { readonly: 'readonly'}},
                    { label: 'Delivery Date',name: 'delveryDate', editable: true,editoptions: { readonly: 'readonly'}},
                    { label: 'Order Number',name: 'orderNumber', editable: true,editoptions: { readonly: 'readonly'}},
