--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,5 +6,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome @Html.DisplayFor(model => model.Name)</h1>
+    <p>Version 0.0.1</p>
 @*    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
 </div>
